deploy: 65d35edd8aac4f1757a1137a969d1a1ff169e852

--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
                         
                     </div>
 
-                    <h1 class="menu-title">PRA-doc</h1>
+                    <h1 class="menu-title">schedule-doc</h1>
 
                     <div class="right-buttons">
                         
