--- a/404.html
+++ b/404.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="ch1.html"><strong aria-hidden="true">1.</strong> 页面置换介绍</a></li><li class="chapter-item expanded "><a href="ch2.html"><strong aria-hidden="true">2.</strong> 页面置换机制</a></li><li class="chapter-item expanded "><a href="ch3.html"><strong aria-hidden="true">3.</strong> 页面置换算法的实现</a></li><li class="chapter-item expanded "><a href="test.html"><strong aria-hidden="true">4.</strong> 用户态程序测试</a></li><li class="chapter-item expanded "><a href="tree.html"><strong aria-hidden="true">5.</strong> 代码树</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 进程调度</a></li><li class="chapter-item expanded "><a href="part1.html"><strong aria-hidden="true">2.</strong> 批处理系统与交互式系统的调度</a></li><li class="chapter-item expanded "><a href="part2.html"><strong aria-hidden="true">3.</strong> 通用计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part3.html"><strong aria-hidden="true">4.</strong> 实时计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part4.html"><strong aria-hidden="true">5.</strong> 多处理器系统调度</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
