deploy: bae2443781e4ab94a3cfaafe1fb7343305b9e7bf

--- a/part4.html
+++ b/part4.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>多处理器系统调度 - schedule-doc</title>
+        <title>多处理机系统调度 - schedule-doc</title>
         
         
 
@@ -95,7 +95,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 进程调度</a></li><li class="chapter-item expanded "><a href="part1.html"><strong aria-hidden="true">2.</strong> 批处理系统与交互式系统的调度</a></li><li class="chapter-item expanded "><a href="part2.html"><strong aria-hidden="true">3.</strong> 通用计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part3.html"><strong aria-hidden="true">4.</strong> 实时计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part4.html" class="active"><strong aria-hidden="true">5.</strong> 多处理器系统调度</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 进程调度</a></li><li class="chapter-item expanded "><a href="part1.html"><strong aria-hidden="true">2.</strong> 批处理系统与交互式系统的调度</a></li><li class="chapter-item expanded "><a href="part2.html"><strong aria-hidden="true">3.</strong> 通用计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part3.html"><strong aria-hidden="true">4.</strong> 实时计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part4.html" class="active"><strong aria-hidden="true">5.</strong> 多处理机系统调度</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -165,7 +165,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="多处理器系统调度"><a class="header" href="#多处理器系统调度">多处理器系统调度</a></h1>
+                        <h1 id="多处理机系统调度"><a class="header" href="#多处理机系统调度">多处理机系统调度</a></h1>
 
                     </main>
 
