--- a/print.html
+++ b/print.html
@@ -97,7 +97,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 进程调度</a></li><li class="chapter-item expanded "><a href="part1.html"><strong aria-hidden="true">2.</strong> 批处理系统与交互式系统的调度</a></li><li class="chapter-item expanded "><a href="part2.html"><strong aria-hidden="true">3.</strong> 通用计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part3.html"><strong aria-hidden="true">4.</strong> 实时计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part4.html"><strong aria-hidden="true">5.</strong> 多处理器系统调度</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">1.</strong> 进程调度</a></li><li class="chapter-item expanded "><a href="part1.html"><strong aria-hidden="true">2.</strong> 批处理系统与交互式系统的调度</a></li><li class="chapter-item expanded "><a href="part2.html"><strong aria-hidden="true">3.</strong> 通用计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part3.html"><strong aria-hidden="true">4.</strong> 实时计算机系统的调度</a></li><li class="chapter-item expanded "><a href="part4.html"><strong aria-hidden="true">5.</strong> 多处理机系统调度</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -234,7 +234,7 @@ w: 等待时间(waiting time); s: 执行时间(service time).</p>
 <p>最早截止期限优先（EDF）调度根据截止期限动态分配优先级。截止期限越早，优先级越高；截止期限越晚，优先级越低。</p>
 <p>根据 EDF 策略，当一个进程可运行时，它应向系统公布截止期限要求。优先级可能需要进行调整，以便反映新可运行进程的截止期限。注意单调速率调度与 EDF 调度的不同，前者的优先级是固定的。</p>
 <h3 id="最低松弛度优先算法llf"><a class="header" href="#最低松弛度优先算法llf">最低松弛度优先算法(LLF)</a></h3>
-<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="多处理器系统调度"><a class="header" href="#多处理器系统调度">多处理器系统调度</a></h1>
+<div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="多处理机系统调度"><a class="header" href="#多处理机系统调度">多处理机系统调度</a></h1>
 
                     </main>
 
