--- a/print.html
+++ b/print.html
@@ -185,11 +185,58 @@
 <h3 id="最短作业优先sjf"><a class="header" href="#最短作业优先sjf">最短作业优先(SJF)</a></h3>
 <p>最短作业优先（SJF）调度算法将每个进程与其下次 CPU 执行的长度关联起来。当 CPU 变为空闲时，它会被赋给具有最短 CPU 执行的进程。</p>
 <p>理论上很简单，而SJF 算法的真正困难是如何知道下次 CPU 执行的长度。对于批处理系统的长期（或作业）调度，可以将用户提交作业时指定的进程时限作为长度。在这种情况下，用户有意精确估计进程时间，因为低值可能意味着更快的响应（过小的值会引起时限超出错误，进而需要重新提交）。SJF 调度经常用于长期调度。另一种方法是试图近似 SJF 调度。虽然不知道下一个 CPU 执行的长度，但是可以预测它。可以认为下一个 CPU 执行的长度与以前的相似。因此，通过计算下一个 CPU 执行长度的近似值，可以选择具有预测最短 CPU 执行的进程来运行。</p>
-<p>要为rCore-Tutorial实现，我采用第一种方法，让用户在提交可执行文件时对其执行时间进行标注，内核在初始化进程时，按照标注的大小，对进程就绪队列进行排序，这样每次取出执行的进程便是最短作业。</p>
+<h4 id="实现"><a class="header" href="#实现">实现</a></h4>
+<p>要为rCore-Tutorial实现，我们需要获得所运行的进程的预期时间。由于rCore-Tutorial的进程创建机制是fork+exec，考虑在exec执行可执行文件时同步传入该进程的预期时间，即为exec系统调用添加一个参数，用来修改TCB中task_prediction项。这样，在Task_Manager向就绪队列添加任务时，按照prediction的大小插入指定的位置，保证每次取出的是最短的进程。</p>
+<p>另一点需要注意的是，尽管SJF是抢占式STCF的基础，但由于fork+exec机制，在一个新进程被创建时，要首先调度到这个新进程，执行exec添加了prediction的值后，再停止该进程，重新运行run_next来选择最短进程，而不是回到被创建前的那个进程执行，实际上这更像抢占式。因此为了保证新进程到来后不抢占原进程，添加标志task_isrunning，对于正常运行中的进程此值为T，而仅执行exec的进程不置为T仍为F，在添加任务时优先保证为T的进程在前面，再比较prediction。这样，即使出现了一个新的更短的进程，它也会排在原来的进程后面，从而使原进程继续执行。</p>
+<h4 id="测试"><a class="header" href="#测试">测试</a></h4>
+<pre><code>static TESTS: &amp;[&amp;str] = &amp;[
+    &quot;sjf1\0&quot;,
+    &quot;sjf2\0&quot;,
+    &quot;sjf3\0&quot;,
+    &quot;sjf4\0&quot;,
+];
+
+static TIMES: [usize;4] = [
+    10000,
+    100000,
+    1000,
+    100,
+];
+</code></pre>
+<p>预设四个进程，其预期时间如TIMES，但sjf1,2,3是在开始时一起到达，而sjf4则在500ms后到达。按照SJF，在前500ms，由于sjf3预期时间最短，优先执行sjf3，执行到500ms时，sjf4到达，虽然时间更短，但不会发生抢占，直到1000ms sjf3执行完成，再按照412的顺序执行。</p>
+<img src="assets/SJFtest.png" alt=" " style="zoom:50%;" />
 <h3 id="最短完成时间优先stcf"><a class="header" href="#最短完成时间优先stcf">最短完成时间优先(STCF)</a></h3>
-<p>上面提到的SJF算法不允许抢占，我们可以实现一种支持进程抢占的改进型SJF调度策略，即最短完成时间优先（Shortest Time to Complet First）调度策略。</p>
+<p>上面提到的SJF算法不允许抢占，我们可以实现一种支持进程抢占的改进型SJF调度策略，即最短完成时间优先（Shortest Time to Complete First）调度策略。</p>
 <p>当一个新进程到达就绪队列而以前进程正在执行时，就需要选择了。新进程的下次 CPU 执行，与当前运行进程的尚未完成的 CPU 执行相比，可能还要小。STCF算法会抢占当前运行进程，而非抢占 SJF 算法会允许当前运行进程以先完成 CPU 执行。</p>
-<p>为实现抢占机制，在新进程到来时，不仅对进程就绪队列进行排序，同时也暂停当前进程，将其加回至就绪队列，重新选择最短进程执行。</p>
+<h4 id="实现-1"><a class="header" href="#实现-1">实现</a></h4>
+<p>根据上面的分析，在我们不加isrunning时，实际上就是一个抢占式。因此我们要做的就是在SJF基础上将按照prediction判断改为按照剩余时间判断。为了明确剩余时间，添加task_last_start_time，task_complete_time两个量记录每次运行的结果，后者初值和prediction相同。每当进程被调度开始执行，则将task_last_start_time记为当前时间；每当新进程到达，则</p>
+<pre><code>task_inner.task_complete_time -= (get_time_ms() - task_inner.task_last_start_time) as isize;
+</code></pre>
+<p>来计算剩余时间，add_task时按照complete_time排序。</p>
+<h4 id="测试-1"><a class="header" href="#测试-1">测试</a></h4>
+<pre><code>static TESTS: &amp;[&amp;str] = &amp;[
+    &quot;sjf1\0&quot;,
+    &quot;sjf2\0&quot;,
+    &quot;sjf3\0&quot;,
+    &quot;sjf4\0&quot;,
+    &quot;sjf5\0&quot;,
+];
+
+static TIMES: [usize;5] = [
+    10000,
+    100000,
+    1000,
+    500,
+    500,
+];
+..
+	if i == 3 || i == 4{
+            sleep(300);
+        }
+</code></pre>
+<p>和SJF测试相比，sjf4的时间变为500，新加了一个和sjf4一样的sjf5.在启动中，123仍旧同时到达，4晚了300ms，5再晚300ms。</p>
+<p>于是按照STCF，前300ms是3执行，但4到达后，由于1000-300&gt;500，发生抢占，4开始执行。再300ms，5到达，但此时4执行了300ms，剩余时间500-300&lt;500，4继续执行。直到再过200ms 4执行完毕，5开始执行，之后是3的剩余部分和12.</p>
+<img src="assets/STCFtest.png" alt=" " style="zoom:50%;" />
 <h3 id="最高响应比优先hrrn"><a class="header" href="#最高响应比优先hrrn">最高响应比优先(HRRN)</a></h3>
 <p>由于SJF的判断标准比较单调，在其基础上改进得到最高响应比优先调度算法，即选择就绪队列中响应比R值最高的进程：
 $$
@@ -197,7 +244,37 @@ $$
 $$
 w: 等待时间(waiting time); s: 执行时间(service time).</p>
 <p>HRRN为非抢占式的算法。因此只有当前运行的作业/进程主动放弃处理机时，才需要调度，才需要计算响应比。与SJF相比，HRRN综合考虑了等待时间和运行时间(要求服务时间)，避免了长作业饥饿等问题。</p>
-<p>在进程数据结构中添加对其到达时间的记录，在每次选择进程时利用该时间与标注的执行时间计算响应比，从而可以实现HRRN算法。</p>
+<h4 id="实现-2"><a class="header" href="#实现-2">实现</a></h4>
+<p>在TCB中添加对其上次停止执行时间last_yield_time与总等待时间waiting_time的记录，前者初始化为到达时间，后者为了消除0的影响初始化为1.每次进程让出处理机，修改last_yield_time为当前时间；每次得到处理机，计算：</p>
+<pre><code>task_inner.task_waiting_time += get_time_ms() - task_inner.task_last_yield_time;
+</code></pre>
+<p>在每次选择进程时利用waiting_time和last_yield_time和当前时间的差值加和与标注的执行时间计算响应比，从而可以实现HRRN算法。由于不建议使用浮点运算，采用
+$$
+w_1<em>s_2&gt;w_2</em>s_1
+$$
+进行比较，任务1先执行.</p>
+<h4 id="测试-2"><a class="header" href="#测试-2">测试</a></h4>
+<pre><code>static TESTS: &amp;[&amp;str] = &amp;[
+    &quot;sjf1\0&quot;,
+    &quot;sjf2\0&quot;,
+    &quot;sjf3\0&quot;,
+    &quot;sjf4\0&quot;,
+];
+
+static TIMES: [usize;4] = [
+    2000,
+    100000,
+    1000,
+    800,
+];
+...
+	if i == 3{
+            sleep(900);
+        }
+</code></pre>
+<p>我们按照HRRN让sjf1先于sjf4执行。sjf1的预期时间被调整到了2000，而4的则变为800，延迟900到达。开始同样是sjf3先执行，并且不会被抢占。当3结束后，对于1和4，(1000-0)*800&gt;(1000-900)*2000，于是1将先于4先执行，这就和SJF不同了。</p>
+<img src="assets/HRRNtest.png" alt=" " style="zoom:50%;" />
+<p>PS:虽然结果和分析的一致，但是可以看出一个问题，由于进程切换等的影响，sjf3的时间零点和初始进程的时间零点差别已经有不小了，这使得sjf4的等待时间从理论上的100变为这里的1185-990=195，虽然不影响这个例子，但是不可忽视，需要来找到一个解决方法。</p>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="通用计算机系统的调度"><a class="header" href="#通用计算机系统的调度">通用计算机系统的调度</a></h1>
 <h3 id="固定优先级的多级队列mq"><a class="header" href="#固定优先级的多级队列mq">固定优先级的多级队列(MQ)</a></h3>
 <p>多级队列调度算法将就绪队列分成多个单独队列。根据进程属性，如内存大小、进程优先级、进程类型等，一个进程永久分到一个队列，每个队列有自己的调度算法，通常在队列中采用RR调度。而队列间则通常采用固定优先级抢占调度，比如为前台队列设置更高的优先级，使前台队列先于后台队列执行。</p>
@@ -209,20 +286,80 @@ w: 等待时间(waiting time); s: 执行时间(service time).</p>
 <li>创建进程并让进程首次进入就绪队列时，设置进程的优先级为最高优先级。</li>
 <li>进程用完其时间配额后，就会降低其优先级。</li>
 </ol>
-<p>那么在MQ的基础上，我们将所有的进程初始均放入第一个队列中，每当时间片轮转，当前进程未执行完毕，则将其调整到下一队列，而从最高队列重新选择进程执行，直到当前队列为空为止。</p>
+<h4 id="实现-3"><a class="header" href="#实现-3">实现</a></h4>
+<p>那么在MQ的基础上，我们记录一个优先级，初始设为最高，将所有的进程初始均放入第一个队列中，每当时间片轮转，当前进程未执行完毕，则降低一个优先级，将其调整到下一队列，而从最高队列重新选择进程执行，直到当前队列为空为止。</p>
+<h4 id="测试-3"><a class="header" href="#测试-3">测试</a></h4>
+<pre><code>static TESTS: &amp;[&amp;str] = &amp;[
+    &quot;mlfq1\0&quot;,
+    &quot;mlfq2\0&quot;,
+    &quot;mlfq3\0&quot;,
+    &quot;mlfq4\0&quot;,
+    &quot;mlfq5\0&quot;,
+];
+	if i == 3 || i == 4{
+            sleep(200);
+        }
+</code></pre>
+<p>共5个mlfq测试进程，其中mlfq4和5的到达会依次延迟200.</p>
+<p>按照MLFQ，前200内，123将轮番执行，共同降低优先级，那么在4到达时，4将处于最高优先级，于是会连续执行较多时间片，之后再和123共同轮番执行；5到达后，5和1将拥有比之前4和1之间更大的优先级差，因此会连续执行更多时间片，再共同轮转执行。</p>
+<center>
+<figure>
+    <img src="assets/MLFQ1.png" alt=" " style="zoom:50%;" />
+    <img src="assets/MLFQ2.png" alt=" " style="zoom:50%;" />
+</figure>
+</center>
+<p>现在让mlfq4模拟交互式，让其在时间片内通过sleep主动暂停运行，而在下个时间片被唤醒。</p>
+<img src="assets/MLFQ3.png" alt=" " style="zoom:50%;" />
+<p>可以看到，4不再是连续占用时间片，但是每次被唤醒时都能得到优先的运行。即使是5到达，拥有最高优先级：</p>
+<img src="assets/MLFQ4.png" alt=" " style="zoom:50%;" />
+<p>仍然是45交替执行，直到5和123同优先级，4和1235交替执行。</p>
 <h3 id="公平共享fss"><a class="header" href="#公平共享fss">公平共享(FSS)</a></h3>
 <p>从某种程度上看，MLFQ调度策略总提到的优先级就是对公平性的一种划分方式，有些进程优先级高，会更快地得到处理器执行，所分配到的处理器时间也多一些。但MLFQ并不是把公平性放在第一位。如果把公平性放在首位，我们就可以设计出另外一类调度策略 – 公平份额（Fair Share，又称为 比例份额，Proportional Share）调度。其基本思路是基于每个进程的重要性（即优先级）的比例关系，分配给该进程同比例的处理器执行时间。</p>
-<h4 id="彩票调度lottery"><a class="header" href="#彩票调度lottery">彩票调度(Lottery)</a></h4>
+<h3 id="彩票调度lottery"><a class="header" href="#彩票调度lottery">彩票调度(Lottery)</a></h3>
 <p>一种有意思的FSS调度是彩票调度（Lottery Scheduling），它是从经济学的的彩票行为中吸取营养，模拟了购买彩票和中奖的随机性，给每个进程发彩票，进程优先级越高，所得到的彩票就越多；然后每隔一段时间（如，一个时间片），举行一次彩票抽奖，抽出来的号属于哪个进程，哪个进程就能运行。</p>
-<p>其具体实现过程是，在每个时间片到时，操作系统就抽取彩票，由于操作系统已知总彩票数有10张，所以操作系统产生一个从0和9之间随机数作为获奖彩票号，拥有这个彩票号的进程中奖，并获得下一次处理器执行机会。通过在一段较长的时间内不断地抽彩票，基于统计学，可以保证两个两个进程可以获得与优先级等比例的处理器执行时间。</p>
-<h4 id="步长调度stride"><a class="header" href="#步长调度stride">步长调度(Stride)</a></h4>
+<p>在每个时间片到时，操作系统就抽取彩票，由于操作系统已知总彩票数，所以操作系统产生一个从0到total的随机数作为获奖彩票号，拥有这个彩票号的进程中奖，并获得下一次处理器执行机会。通过在一段较长的时间内不断地抽彩票，基于统计学，可以保证两个两个进程可以获得与优先级等比例的处理器执行时间。</p>
+<h4 id="实现-4"><a class="header" href="#实现-4">实现</a></h4>
+<p>基本按照原理实现即可，记录进程优先级队列，与就绪队列一一对应，记录总数total为优先级之和乘一个扩大倍数100.每次fetch任务就产生一个total内的随机数，落在哪个范围就将对应的进程取出。需要注意的是由于优先级的初始值一般设为最高，因此要特别设定initproc的优先级为1，使之基本不会得到调度。</p>
+<h4 id="测试-4"><a class="header" href="#测试-4">测试</a></h4>
+<pre><code>pub fn count_during(prio: isize) -&gt; isize {
+    let start_time = get_time();
+    let mut acc = 0;
+    set_priority(prio);
+    loop {
+        spin_delay();
+        acc += 1;
+        if acc % 400 == 0 {
+            let time = get_time() - start_time;
+            if time &gt; MAX_TIME {
+                return acc;
+            }
+        }
+    }
+}
+fn spin_delay() {
+    let mut j = true;
+    for _ in 0..10 {
+        j = !j;
+    }
+}
+</code></pre>
+<p>上面是测例Lottery0-5的主体部分，差别在于set_priority(prio)的prio值从5到10变化。因此，可以预测最终得到的acc的值应该随着prio的增大而增大，且基本成比例。但是由于随机数的性质，一般来说会有误差：</p>
+<img src="assets/Lottery4k.png" alt=" " style="zoom:50%;" />
+<p>设定每次测试的测试时间为4000ms时，虽然从exitcode可以大概看出满足随着prio的增大而增大的关系，但是仍有部分prio增大acc反而减小，而且ratio的浮动也比较大。</p>
+<p>延长测试时间到12000ms，终于可以得到一个比较好的结果：</p>
+<img src="assets/Lottery12k.png" alt=" " style="zoom:50%;" />
+<p>exitcode随prio增大，且ratio基本稳定了。</p>
+<h3 id="步长调度stride"><a class="header" href="#步长调度stride">步长调度(Stride)</a></h3>
 <p>另一种FSS调度为Stride调度。其基本思路是：每个进程有一个步长（Stride）属性值，这个值与进程优先级成反比，操作系统会定期记录每个进程的总步长，即行程（pass），并选择拥有最小行程值的进程运行。</p>
-<p>具体实现可以像这样：</p>
+<h4 id="实现-5"><a class="header" href="#实现-5">实现</a></h4>
 <ol>
 <li>为每个进程设置一个当前 stride，表示该进程当前已经运行的“长度”。另外设置其对应的 pass 值（只与进程的优先权有关系），表示对应进程在调度后，stride 需要进行的累加值。</li>
 <li>每次需要调度时，从当前 runnable 态的进程中选择 stride 最小的进程调度。对于获得调度的进程 P，将对应的 stride 加上其对应的步长 pass。</li>
 <li>一个时间片后，回到上一步骤，重新调度当前 stride 最小的进程。</li>
 </ol>
+<h4 id="测试-5"><a class="header" href="#测试-5">测试</a></h4>
+<p>与Lottery的测例一致，但结果更加优美：</p>
+<img src="assets/Stride.png" alt=" " style="zoom:50%;" />
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="实时计算机系统的调度"><a class="header" href="#实时计算机系统的调度">实时计算机系统的调度</a></h1>
 <p>实时计算机系统通常可以分为硬实时（Hard Real Time）和软实时（Soft Real Time）两类，硬实时是指任务完成时间必须在绝对的截止时间内，如果超过意味着错误和失败，可能导致严重后果。软实时是指任务完成时间尽量在绝对的截止时间内，偶尔超过可以接受。</p>
 <p>实时的任务是由一组进程来实现，其中每个进程的行为是可预测和提前确定的。这些进程称为实时进程，它们的执行时间一般较短。支持实时任务的操作系统称为实时操作系统。实时计算机系统是一种以确定的时间范围起到主导作用的计算机系统，一旦外设发给计算机一个事件（如时钟中断、网络包到达等），计算机必须在一个确定时间范围内做出响应。</p>
