--- a/print.html
+++ b/print.html
@@ -172,6 +172,8 @@
 <p>当处理器只有一个，而在内存中存在多个程序/任务/进程的时候，它们就会共享处理器资源。而操作系统就要负责让它们能够高效合理地共享处理器资源，这就引入了调度（scheduling）这个概念。进程调度就是操作系统进程管理的重要组成部分。事实上，在计算机出现之前，调度的概念和应用就出现在人类的生活、工作和生产环境中了，如汽车装配线调度、工厂作业车间调度等。调度的一个一般定义是：在一定的约束条件下，把有限的资源在时间上分配给若干个任务，以满足或优化一个或多个性能指标。对于计算机系统而言，就是在一台计算机中的内存中运行了多个进程，操作系统把有限的处理器在时间上分配给各个进程，以满足或优化进程执行的性能指标。</p>
 <p>在rCore-Tutorial中，给每个任务分配了时间片，任务执行消耗完时间片后，操作系统就可以抢占正在执行的任务，把处理器分配给其他任务执行。这就是一种基于时间片的轮转调度策略。再之后实现的操作系统都采用了这种调度策略。</p>
 <p>接下来要做的便是按照更多的调度算法原理，为rCore-Tutorial实现各种进程调度机制，来提高系统的调度能力。</p>
+<p><a href="https://git.tsinghua.edu.cn/masy18/rCore-Tutorial-v3">项目代码仓库</a></p>
+<p><a href="https://github.com/msyzzz/rcore-tutorial-schedule-doc">原始文档仓库</a></p>
 <div id="chapter_begin" style="break-before: page; page-break-before: always;"></div><h1 id="批处理系统与交互式系统的调度"><a class="header" href="#批处理系统与交互式系统的调度">批处理系统与交互式系统的调度</a></h1>
 <h3 id="先来先服务fcfs"><a class="header" href="#先来先服务fcfs">先来先服务(FCFS)</a></h3>
 <p>先来先服务（first-come first-severd，也称First-in first-out，先进先出）调度策略的基本思路就是按进程请求处理器的先后顺序来使用处理器。在具体实现上，操作系统建立一个就绪队列，当一个应用进入被加载，并创建为进程进入就绪态后，就按先后顺序放入就绪队列尾；操作系统从就绪队列头取出进程来执行。操作系统不会主动打断进程的运行。当正在运行的进程主动放弃处理器，操作系统会把该进程放到就绪队列末尾，并从就绪队列头取出新进程执行；当正在运行的进程阻塞时，操作系统会把该进程放到阻塞队列中，并从就绪队列头取出新进程执行；当阻塞进程转为就绪进程后，操作系统 会把该进程放到就绪队列末尾。</p>
