--- a/intro.html
+++ b/intro.html
@@ -170,6 +170,8 @@
 <p>当处理器只有一个，而在内存中存在多个程序/任务/进程的时候，它们就会共享处理器资源。而操作系统就要负责让它们能够高效合理地共享处理器资源，这就引入了调度（scheduling）这个概念。进程调度就是操作系统进程管理的重要组成部分。事实上，在计算机出现之前，调度的概念和应用就出现在人类的生活、工作和生产环境中了，如汽车装配线调度、工厂作业车间调度等。调度的一个一般定义是：在一定的约束条件下，把有限的资源在时间上分配给若干个任务，以满足或优化一个或多个性能指标。对于计算机系统而言，就是在一台计算机中的内存中运行了多个进程，操作系统把有限的处理器在时间上分配给各个进程，以满足或优化进程执行的性能指标。</p>
 <p>在rCore-Tutorial中，给每个任务分配了时间片，任务执行消耗完时间片后，操作系统就可以抢占正在执行的任务，把处理器分配给其他任务执行。这就是一种基于时间片的轮转调度策略。再之后实现的操作系统都采用了这种调度策略。</p>
 <p>接下来要做的便是按照更多的调度算法原理，为rCore-Tutorial实现各种进程调度机制，来提高系统的调度能力。</p>
+<p><a href="https://git.tsinghua.edu.cn/masy18/rCore-Tutorial-v3">项目代码仓库</a></p>
+<p><a href="https://github.com/msyzzz/rcore-tutorial-schedule-doc">原始文档仓库</a></p>
 
                     </main>
 
